[package]
name = "viscous"
version = "0.0.0"
authors = ["Jake Swenson <jake@jakeswenson.com>"]
edition = "2018"
description = "A SSH Honeypot with support for virtual filesystems and support "
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shellwords = "1.0.0"
mini-fs = "0.2.2"
vfs = "0.2.1"
thrussh = "0.22.1"
tokio = "1.18.5"
futures = "0.3.4"
thrussh-keys = "0.13.1"
failure = "0.1.7"
twitter-stream = "0.10.0-alpha.6"
slog = "2.5.2"
tracing = "0.1.13"
lru = "0.4.3"
crossbeam = "0.7.3"
